--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-fade-in": "^2.0.1",
+    "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
