--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/window-scroll": "^1.3.0",
     "@types/styled-components": "^5.1.15",
     "next": "12.0.4",
     "react": "17.0.2",
+    "react-cool-inview": "^2.0.8",
     "react-dom": "17.0.2",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
