--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.0.2",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3"
   },
